(WIP) Additional task
- New endpoint to show stats
- New endpoint to create a product
